Replace JPG with PNG

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@ permalink: /contact/
         <meta property="og:description" content="Sybil Mayard's contact details can be found on this page. Get in touch now to arrange a free consultation or make an enquiry by emailing me." />
         <meta property="og:url" content="https://sybilmayard.com/contact/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
