--- a/events.html
+++ b/events.html
@@ -24,7 +24,7 @@ permalink: /events/
         <meta property="og:description" content="Sybil Mayard has partered with CNT Associates to produce a range of events to support your business. View details of our events here." />
         <meta property="og:url" content="https://sybilmayard.com/events/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
