--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ permalink: /about/
         graduated from the University of Kent with an MSc in Computer Science. Read about her experiences here." />
         <meta property="og:url" content="https://sybilmayard.com/about/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
