--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@ permalink: /blog/
         services for SMEs. Read my blog posts here." />
         <meta property="og:url" content="https://sybilmayard.com/blog/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
