--- a/faqs.html
+++ b/faqs.html
@@ -129,7 +129,7 @@ permalink: /faqs/
         <meta property="og:description" content="Sybil Mayard provides website development services for small businesses. Find the answers to your frequently asked questions (FAQs) here." />
         <meta property="og:url" content="https://sybilmayard.com/faqs/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
