--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@ permalink: /projects/
         <meta property="og:description" content="A selection of Sybil Mayard's personal projects." />
         <meta property="og:url" content="https://sybilmayard.com/projects/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
