--- a/services.html
+++ b/services.html
@@ -98,12 +98,12 @@ permalink: /services/
                 <h3>Free Website Review</h3>
                 <p>This is a short analysis of your website which identifies issues within a range of areas, including but not limited to:</p>
                 <ul>
-                    <li>Search engine optimisation (SEO)</li>
-                    <li>Mobile responsiveness</li>
                     <li>User-friendliness</li>
                     <li>Design</li>
+                    <li>Mobile responsiveness</li>
                     <li>404 errors</li>
                     <li>Proofing errors</li>
+                    <li>Search engine optimisation (SEO)</li>
                 </ul>
                 <p>The report will be provided in PDF format and includes recommended actions to resolve the issues.</p>
 
@@ -117,7 +117,7 @@ permalink: /services/
                     <a href="https://www.shopify.co.uk/" target="_blank" rel="noopener noreferrer">
                         Shopify</a>, <a href="https://www.squarespace.com/" target="_blank" 
                         rel="noopener noreferrer">Squarespace</a>) according to your requirements. 
-                        Your website will be professional, search engine optimised and responsive across a range of devices.</p>
+                        Your website will be professional, easy to maintain and responsive across a range of devices.</p>
                 
                 <p>Your site will be verified with <a href="https://search.google.com/search-console/about" target="_blank" 
                     rel="noopener noreferrer">Google Search Console</a> to monitor its performance in search. All SEO techniques used comply with the <a href="https://developers.google.com/search/docs/advanced/guidelines/webmaster-guidelines" target="_blank" 
@@ -129,7 +129,8 @@ permalink: /services/
                 <p>If you need help running your website, a regular service can be provided for a low monthly cost. This service includes but is not limited to:</p>
                 <ul>
                     <li>Adding/publishing pages and blog posts</li>
-                    <li>Adding/updating apps, plugins and themes</li>
+                    <li>Installing/updating apps and plugins</li>
+                    <li>Theme customisations</li>
                     <li>Managing products (if you have an e-commerce store)</li>
                 </ul>
                 <h4>One-Off Tasks</h4>
@@ -137,7 +138,8 @@ permalink: /services/
                 <ul>
                     <li>Setting up a scheduling system for a yoga practice</li>
                     <li>Implementing a registration form for an online course platform</li>
-                    <li>Adding colour swatches to products on a Shopify store</li>
+                    <li>Adding colour swatches to product pages on a Shopify store</li>
+                    <li>Creating a members' area on a WordPress site to restrict access to resources to authorised users only</li>
                 </ul>
                 <div class="center padding-bottom padding-top">
                     <a class="btn-primary" href="https://sybilmayard.com/contact">Contact Me</a>   
