--- a/faqs.html
+++ b/faqs.html
@@ -23,19 +23,14 @@ permalink: /faqs/
                 "name": "How much do you charge?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "This would very much depend on the work to be carried out. Please 
-                  <a href=mailto:info@sybilmayard.com>get in touch</a> to arrange an initial 
-                  consultation, after which I can provide a detailed quote for your requirements."
+                  "text": "This would very much depend on the requirements of the project. Please <a href=mailto:info@sybilmayard.com>get in touch</a> to arrange an initial consultation, after which I can provide a detailed quote for you"
                 }
               }, {
                 "@type": "Question",
                 "name": "How long does the work take?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "The time it takes to complete the work would depend on what is involved. 
-                  A 5-page website could be completed in as little as 4 weeks depending on how 
-                  quickly I receive the required information. In order for the work to be 
-                  completed as soon as possible, please provide the required information promptly."
+                  "text": "The time it takes to complete the work would depend on the complexity of the project. A 5-page website could be completed in as little as 4 weeks depending on how quickly I receive the required information. In order for the work to be completed as soon as possible, please provide the required information promptly. An estimated timeframe for completion of the project can be discussed during our initial call."
                 }
               }, {
                 "@type": "Question",
@@ -64,30 +59,38 @@ permalink: /faqs/
                 "name": "Which platforms do you develop on?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "<p>I develop websites on <a href=https://wordpress.org/>WordPress</a>, 
+                  "text": "I develop websites on <a href=https://wordpress.org/>WordPress</a>, 
                     <a href=https://www.wix.com/ >Wix</a>, <a href=https://www.shopify.co.uk/>
-                        Shopify</a> and <a href=https://www.squarespace.com/>Squarespace</a>.</p>"
+                        Shopify</a> and <a href=https://www.squarespace.com/>Squarespace</a>."
                 }
               }, {
                 "@type": "Question",
                 "name": "Would we need to meet in person?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text":"Until further notice, all meetings will be via <a href=https://zoom.us/>Zoom</a>, 
-                    <a href=https://meet.google.com/>Google Meet</a>, 
-                    <a href=https://www.microsoft.com/en-gb/microsoft-365/microsoft-teams/free>
-                        Microsoft Teams</a> or 
-                    <a href=https://whereby.com/>Whereby</a>."
+                  "text":"Until further notice, all meetings will be via <a href=https://zoom.us/>Zoom</a> or 
+                    <a href=https://meet.google.com/>Google Meet</a>."
                 }
             }, {
                 "@type": "Question",
                 "name": "What is the process for developing a website?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"The first step would be to arrange a free consultation to discuss your 
+                    "text":"<p>The first step would be to arrange a free consultation to discuss your 
                     requirements. After this initial meeting, I would provide you with detailed 
                     quote. If you are happy to proceed, I will send you an agreement. Once the 
-                    agreement has been signed by both of us, I will proceed with the work."
+                    agreement has been signed by both of us, I will proceed with the work.</p><ul><li>If
+                    you need a complete website to be developed, I will begin by producing the
+                    designs. After you have reviewed the designs and there are no further changes, 
+                    I will start building the site in your chosen website builder. I will ask for 
+                    feedback via email on a regular basis to ensure that the site is built 
+                    according to your specifications. When you are happy with the website and I am 
+                    satisfied that sufficient testing has been carried out, we will agree on a 
+                    date to launch the site. I will then transfer ownership of the website to you. 
+                    </li><li>If you have an existing website and you require my maintenance services, I 
+                    will request access to the platform. Once I receive the required permissions 
+                    I will begin with the work. I will send you regular updates via email so that 
+                    you are always aware of the status of the project.</li></ul>"
                 }
             }, {
                 "@type": "Question",
@@ -103,6 +106,20 @@ permalink: /faqs/
                 "acceptedAnswer": {
                     "@type": "Answer",
                     "text":"I hold an MSc in Computer Science from the University of Kent."
+                }
+            }, {
+                "@type": "Question",
+                "name": "Are you an SEO expert?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text":"No - SEO is a separate field in which I am not an expert. I can perform basic SEO improvements to your website (e.g. page titles, meta descriptions and alt tags) but if you require more advanced improvements I would suggest to work with a suitably qualified SEO professional."
+                }
+            }, {
+                "@type": "Question",
+                "name": "Are you a copywriter?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text":"I do not offer a copywriting service; please provide me with all of the copy you would like to add to the website. However, I am happy to proofread any text supplied in English. If you need a multilingual website, please also provide me with the translated copy."
                 }
             }, {
                 "@type": "Question",
@@ -199,10 +216,9 @@ permalink: /faqs/
                     <hr>
                 </div>
                 <h3>How much do you charge?</h3>
-                <p>This would very much depend on the work to be carried out. Please <a href="mailto:info@sybilmayard.com">get in touch</a> to arrange an initial consultation, after which I can provide a detailed quote for your requirements.</p>
-
+                <p>This would very much depend on the requirements of the project. Please <a href="mailto:info@sybilmayard.com">get in touch</a> to arrange an initial consultation, after which I can provide a detailed quote for you.</p>
                 <h3>How long does the work take?</h3>
-                <p>The time it takes to complete the work would depend on what is involved. A 5-page website could be completed in as little as 4 weeks depending on how quickly I receive the required information. In order for the work to be completed as soon as possible, please provide the required information promptly.</p>
+                <p>The time it takes to complete the work would depend on the complexity of the project. A 5-page website could be completed in as little as 4 weeks depending on how quickly I receive the required information. In order for the work to be completed as soon as possible, please provide the required information promptly. An estimated timeframe for completion of the project can be discussed during our initial call.</p>
                 <h3>What do I need to supply you with?</h3>
                 <ul>
                     <li>Copy and content for each page</li>
@@ -229,20 +245,24 @@ permalink: /faqs/
                         rel="noopener noreferrer">Squarespace</a>.</p>
                 <h3>Would we need to meet in person?</h3>
                 <p>Until further notice, all meetings will be via <a href="https://zoom.us/" 
-                    target="_blank" rel="noopener noreferrer">Zoom</a>, 
+                    target="_blank" rel="noopener noreferrer">Zoom</a> or
                     <a href="https://meet.google.com/" target="_blank" 
-                    rel="noopener noreferrer">Google Meet</a>, 
-                    <a href="https://www.microsoft.com/en-gb/microsoft-365/microsoft-teams/free" 
-                    target="_blank" rel="noopener noreferrer">Microsoft Teams</a> or 
-                    <a href="https://whereby.com/" target="_blank" 
-                    rel="noopener noreferrer">Whereby</a>.</p>
+                    rel="noopener noreferrer">Google Meet</a>.</p>
                 <h3>What is the process for developing a website?</h3>
                 <p>The first step would be to arrange a free consultation to discuss your requirements. After this initial meeting, I would provide you with detailed quote. If you are happy to proceed, I will send you an agreement. Once the agreement has been signed by both of us, I will proceed with the work.</p>
+                    <ul>
+                        <li>If you need a complete website to be developed, I will begin by producing the designs. After you have reviewed the designs and there are no further changes, I will start building the site in your chosen website builder. I will ask for feedback via email on a regular basis to ensure that the site is built according to your specifications. When you are happy with the website and I am satisfied that sufficient testing has been carried out, we will agree on a date to launch the site. I will then transfer ownership of the website to you.</li>
+                        <li>If you have an existing website and you require my maintenance services, I will request access to the platform. Once I receive the required permissions I will begin with the work. I will send you regular updates via email so that you are always aware of the status of the project.</li>
+                    </ul>
                 <h3>Can I see examples of your previous work?</h3>
                 <p>Of course, please see my <a href="https://sybilmayard.com/clients">Clients</a> page for examples of past work I have carried out for clients.</p>
                 <h3>What are your qualifications?</h3>
                 <p>I hold an MSc in Computer Science from the <a href="https://www.kent.ac.uk" 
                     target="_blank" rel="noopener noreferrer">University of Kent</a>.</p>
+                <h3>Are you an SEO expert?</h3>
+                <p>No - SEO is a separate field in which I am not an expert. I can perform basic SEO improvements to your website (e.g. page titles, meta descriptions and alt tags) but if you require more advanced improvements I would suggest to work with a suitably qualified SEO professional.</p>
+                <h3>Are you a copywriter?</h3>
+                <p>I do not offer a copywriting service; please provide me with all of the copy you would like to add to the website. However, I am happy to proofread any text supplied in English. If you need a multilingual website, please also provide me with the translated copy.</p>
                 <h3>I cannot find the answer to my question in these FAQs. How can I contact you?</h3>
                 <p>Please get in touch with me by emailing <a href="mailto:info@sybilmayard.com">info@sybilmayard.com</a>.</p>                                
             </div>
