Add Patricia's testimonial to the homepage

--- a/index.html
+++ b/index.html
@@ -177,6 +177,16 @@ permalink: /
                 <h2 class="center">My Happy Clients!</h2>
                 <hr>
                 <div class="row">
+                    <div class="col-12">
+                        <div class="shadow-box center">                            
+                            <p>The first time I spoke to Sybil about designing my website, she really listened and took everything I wanted into the first draft of the layout. It was unbelievably accurate and she incorporated (and enhanced) even the smallest details that I had mentioned. What is great is, over the time I have worked with Sybil, she has been professional as well as patient with me when I wanted to add or change things. She is totally client focused. She morphs design and technical knowledge beautifully. She produces such high quality websites whilst being able to commit to deadlines. Sybil works so hard to bring clients bespoke websites! I am so happy with the support I received from Sybil and over the moon with the way my website looks! I have been recommending Sybil to everyone and won’t stop! She’s amazing!</p>
+                            <div class="center">
+                                <img src="https://sybilmayard.com/images/logos/happily-clappily-ever-laughter-logo.png" alt="Happily Clappily Ever Laughter logo">
+                            </div>
+                            <h4>Patricia Byrne</h4>
+                            <p class="center">CEO,<br>Happily Clappily Ever Laughter</p>
+                        </div>
+                    </div>
                     <div class="col-6">
                         <div class="shadow-box center">                            
                             <p>It was a pleasure to work with Sybil to create my Shopify website. 
