--- a/clients.html
+++ b/clients.html
@@ -94,9 +94,28 @@ permalink: /clients/
                     <a href="#"><p style="font-size: 24px">↑</p></a>
                 </div>
 
-                <p>Throughout my freelancing career, I’ve helped a variety of clients achieve 
+                <p>Throughout my freelancing career, I've helped a variety of clients achieve 
                     their goal of improving their online presence. Here is a selection of my 
                     most recent client projects and the services that were provided.</p>
+
+                <div id="global-banking-school" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybilmayard.com/images/clients/Global-Banking-School.jpg" alt="Global Banking School">
+                        </div>
+                        <div class="col-8">
+                            <h2>Global Banking School</h2>
+                            <h3 style="font-size: 18px;">Flexible study that fits around you</h3>
+                            <ul>
+                                <li>Landing page design</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://globalbanking.ac.uk/" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <div id="happily-clappily-ever-laughter" class="shadow-box-2">
                     <div class="row-2">
