Added Crazy Thumbs, Meitam London and The Bamboo Wardrobe

--- a/index.html
+++ b/index.html
@@ -129,27 +129,27 @@ permalink: /
             <p class="container-700 padding-top center">A selection of clients I have recently 
                 worked with:</p>
             <div class="row">
+                <div class="col-3">                    
+                    <a href="https://sybilmayard.com/clients#crazy-thumbs"><img src="https://sybilmayard.com/images/clients/crazy-thumbs.jpg" 
+                        alt="Crazy Thumbs"></a>
+                    <h4>Crazy Thumbs</h4>
+                    </div>
+                <div class="col-3">                       
+                    <a href="https://sybilmayard.com/clients#meitam-london"><img src="https://sybilmayard.com/images/clients/meitam-london.jpg" 
+                        alt="Meitam London"></a>
+                    <h4>Meitam London</h4>
+                </div>
+                <div class="col-3">                    
+                    <a href="https://sybilmayard.com/clients#the-bamboo-wardrobe">
+                        <img src="https://sybilmayard.com/images/clients/the-bamboo-wardrobe.jpg" 
+                        alt="The Bamboo Wardrobe"></a>
+                <h4>The Bamboo Wardrobe</h4>
+                </div>
                 <div class="col-3">                        
                     <a href="https://sybilmayard.com/clients#happily-clappily-ever-laughter">
                         <img src="https://sybilmayard.com/images/clients/Happily-Clappily-Ever-Laughter.JPG" 
                         alt="Happily Clappily Ever Laughter"></a>
                     <h4>Happily Clappily Ever Laughter</h4>
-                </div>
-                <div class="col-3">                    
-                <a href="https://sybilmayard.com/clients#x-blu"><img src="https://sybilmayard.com/images/clients/x-blu.JPG" 
-                    alt="x-blu"></a>
-                <h4>x-blu</h4>
-                </div>
-                <div class="col-3">                       
-                    <a href="https://sybilmayard.com/clients#future-communities-uk"><img src="https://sybilmayard.com/images/clients/Future-Communities-UK.jpg" 
-                        alt="Future Communities UK"></a>
-                    <h4>Future Communities UK</h4>
-                </div>
-                <div class="col-3">                    
-                    <a href="https://sybilmayard.com/clients#events-meets-world">
-                        <img src="https://sybilmayard.com/images/clients/events-meets-world.jpg" 
-                        alt="Events Meets World"></a>
-                <h4>Events Meets World</h4>
                 </div>
             </div>
             <div class="center padding-bottom">
