--- a/clients.html
+++ b/clients.html
@@ -98,6 +98,74 @@ permalink: /clients/
                     their goal of improving their online presence. Here is a selection of my 
                     most recent client projects and the services that were provided.</p>
 
+                <div id="crazy-thumbs" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybilmayard.com/images/clients/crazy-thumbs.jpg" alt="Crazy Thumbs">
+                        </div>
+                        <div class="col-8">
+                            <h2>Crazy Thumbs</h2>
+                            <h3 style="font-size: 18px;">Specialising in vintage video games and equipment as well as contemporary titles and trade-ins.</h3>
+                            <ul>
+                                <li>Shopify store development</li>
+                                <li>Advanced navigation system</li>
+                                <li>Sound effects</li>
+                                <li>Twitch video embeded into homepage</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://crazythumbs.co.uk/" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="bamboo-wardrobe" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-4">   
+                            <img src="https://sybilmayard.com/images/clients/the-bamboo-wardrobe.jpg" alt="The Bamboo Wardrobe">                         
+                        </div>
+                        <div class="col-8">
+                            <h2>The Bamboo Wardrobe</h2>
+                            <h3 style="font-size: 18px;">Wholesale bamboo women's clothing</h3>
+                            <ul>
+                                <li>Shopify store development</li>
+                                <li>Product management</li>
+                                <li>New customer email notifications</li>
+                                <li>New customer application form</li>
+                                <li>Google Search Console submission</li>
+                            </ul>  
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://thebamboowardrobe.com"
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="meitam-london" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybilmayard.com/images/clients/meitam-london.jpg" alt="Meitam London">
+                        </div>
+                        <div class="col-8">
+                            <h2>Meitam London</h2>
+                            <h3 style="font-size: 18px;">One-off unique handcrafted pieces made from African natural materials.</h3>
+                            <ul>
+                                <li>Product management</li>
+                                <li>Photo editing in Adobe Photoshop</li>
+                                <li>Theme customisations</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://meitamlondon.com//" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="global-banking-school" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-4">
@@ -372,27 +440,6 @@ permalink: /clients/
                             </ul>  
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://wardellswardrobe.com"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-		<div id="bamboo-wardrobe" class="shadow-box-2">                         
-                    <div class="row-2">
-                        <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/the-bamboo-wardrobe.jpg" alt="The Bamboo Wardrobe">                         
-                        </div>
-                        <div class="col-8">
-                            <h2>The Bamboo Wardrobe</h2>
-                            <h3 style="font-size: 18px;">Wholesale bamboo clothing</h3>
-                            <ul>
-                                <li>Website design improvements</li>
-                                <li>E-commerce setup (products and email notifications)</li>
-                                <li>Google Search Console submission</li>
-                            </ul>  
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://thebamboowardrobe.com"
                                 target="_blank" rel="noopener noreferrer">View Client</a>
                             </div>
                         </div>
