Corrected anchor link for The Bamboo Wardrobe

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ permalink: /
                     <h4>Meitam London</h4>
                 </div>
                 <div class="col-3">                    
-                    <a href="https://sybilmayard.com/clients#the-bamboo-wardrobe">
+                    <a href="https://sybilmayard.com/clients#bamboo-wardrobe">
                         <img src="https://sybilmayard.com/images/clients/the-bamboo-wardrobe.jpg" 
                         alt="The Bamboo Wardrobe"></a>
                 <h4>The Bamboo Wardrobe</h4>
