Update GA4 tracking code

--- a/events.html
+++ b/events.html
@@ -6,12 +6,12 @@ permalink: /events/
     <head>
         <script defer src="https://sybilmayard.com/fontawesome/js/all.min.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-152639461-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'UA-152639461-1');
+            gtag('config', 'G-XVK8SSNQSC');
         </script>
         <script type="application/ld+json">
             {
