--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -6,12 +6,12 @@ permalink: /6-reasons-to-use-shopify/
     <head>
         <script defer src="https://sybilmayard.com/fontawesome/js/all.min.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-152639461-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'UA-152639461-1');
+            gtag('config', 'G-XVK8SSNQSC');
         </script>
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <script type="application/ld+json">
