--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@ permalink: /
         <link rel="canonical" href="https://sybilmayard.com/" />
         <link rel="stylesheet" href="https://sybilmayard.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybilmayard.com/favicon.png">
+        <!-- MailerLite Universal -->
+        <script>
+            (function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
+            var c={ a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
+            f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
+            var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?v'+(~~(new Date().getTime()/1000000));
+            _.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
+            
+            var ml_account = ml('accounts', '2216689', 'x9i7o3w7n4', 'load');
+        </script>
+        <!-- End MailerLite Universal -->     
     </head>
     <body>
         <div class="header">
@@ -297,7 +308,7 @@ permalink: /
         <div class="footer section">
             <div class="container-1200">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-2">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybilmayard.com/about">About</a></p>
@@ -306,12 +317,18 @@ permalink: /
                         <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybilmayard.com/privacy-policy">Privacy Policy</a></p>
                     </div>
-                    <div class="col-4">
+                    <div class="col-2">
                         <h4>Services</h4>
                         <p>Shopify Sites</p>
                         <p>WordPress Sites</p>
                         <p>Wix Sites</p>
                         <p>Squarespace Sites</p>
+                    </div>
+                    <div class="col-4">
+                        <div class="ml-form-embed"
+                            data-account="2216689:x9i7o3w7n4"
+                            data-form="5270027:e5c2j0">
+                        </div>
                     </div>
                     <div class="col-4">
                         <h4>Get in Touch</h4>
