Update index.html and clients.html w/ new clients

--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@ permalink: /
                 <h4>The Bamboo Wardrobe</h4>
                 </div>
                 <div class="col-3">                        
-                    <a href="https://sybilmayard.com/clients#happily-clappily-ever-laughter">
-                        <img src="https://sybilmayard.com/images/clients/Happily-Clappily-Ever-Laughter.JPG" 
-                        alt="Happily Clappily Ever Laughter"></a>
-                    <h4>Happily Clappily Ever Laughter</h4>
+                    <a href="https://sybilmayard.com/clients#together-matters">
+                        <img src="https://sybilmayard.com/images/clients/Together-Matters.jpg" 
+                        alt="Together Matters"></a>
+                    <h4>Together Matters</h4>
                 </div>
             </div>
             <div class="center padding-bottom">
