--- a/clients.html
+++ b/clients.html
@@ -109,6 +109,49 @@ permalink: /clients/
                     their goal of improving their online presence. Here is a selection of my 
                     most recent client projects and the services that were provided.</p>
 
+                <div id="tizane" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybilmayard.com/images/clients/Tizane.jpg" alt="Tizane">
+                        </div>
+                        <div class="col-8">
+                            <h2>Tizane</h2>
+                            <h3 style="font-size: 18px;">News, events, dates and releases from the quirky South-East London-based singer/songwriter.</h3>
+                            <ul>
+                                <li>Website review</li>
+                                <li>Design improvements</li>
+                                <li>Mailchimp integration</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://tizane.net" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div id="together-matters" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybilmayard.com/images/clients/Together-Matters.jpg" alt="Together Matters">
+                        </div>
+                        <div class="col-8">
+                            <h2>Together Matters</h2>
+                            <h3 style="font-size: 18px;">Talking, learning and working together to help create change in people's lives.</h3>
+                            <ul>
+                                <li>Design improvements</li>
+                                <li>Mailchimp integration</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://www.togethermatters.org.uk/" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="crazy-thumbs" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-4">
