--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@ permalink: /
                     <h4>Crazy Thumbs</h4>
                     </div>
                 <div class="col-3">                       
-                    <a href="https://sybilmayard.com/clients#meitam-london"><img src="https://sybilmayard.com/images/clients/meitam-london.jpg" 
-                        alt="Meitam London"></a>
-                    <h4>Meitam London</h4>
+                    <a href="https://sybilmayard.com/clients#nerowireart"><img src="https://sybilmayard.com/images/clients/nerowireart.jpg" 
+                        alt="Nerowireart"></a>
+                    <h4>Nerowireart</h4>
                 </div>
                 <div class="col-3">                    
                     <a href="https://sybilmayard.com/clients#bamboo-wardrobe">
@@ -188,9 +188,19 @@ permalink: /
                 <h2 class="center">My Happy Clients!</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-6">
                         <div class="shadow-box center">                            
-                            <p>The first time I spoke to Sybil about designing my website, she really listened and took everything I wanted into the first draft of the layout. It was unbelievably accurate and she incorporated (and enhanced) even the smallest details that I had mentioned. What is great is, over the time I have worked with Sybil, she has been professional as well as patient with me when I wanted to add or change things. She is totally client focused. She morphs design and technical knowledge beautifully. She produces such high quality websites whilst being able to commit to deadlines. Sybil works so hard to bring clients bespoke websites! I am so happy with the support I received from Sybil and over the moon with the way my website looks! I have been recommending Sybil to everyone and won’t stop! She’s amazing!</p>
+                            <p>Sybil has been a lifesaver! I had an image in my head what I wanted our new webpage to look like (but no skill or idea how to get there!) and for Sybil no question was silly, no suggestion was left out without serious consideration and the final product is sleek, clean and professionally looking. Sybil listened, did not impose a 'manufactured easy to do template' webpage on us. Her approach is truly personable, she managed our expectations beautifully and delivered a service which is best characterized by 'above and beyond'. As University of Kent Alumna, Sybil simply delivered, she certainly commits her knowledge, skill and innovative entrepreneurial mind to 100% benefit for her customer.</p>
+                            <div class="center">
+                                <img src="https://sybilmayard.com/images/logos/nerowireart.png" alt="Nerowireart">
+                            </div>
+                            <h4>Zita Stone</h4>
+                            <p class="center">Nerowireart</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="shadow-box center">                            
+                            <p>The first time I spoke to Sybil about designing my website, she really listened and took everything I wanted into the first draft of the layout. It was unbelievably accurate and she incorporated (and enhanced) even the smallest details that I had mentioned. She is totally client focused. She morphs design and technical knowledge beautifully. She produces such high quality websites whilst being able to commit to deadlines. Sybil works so hard to bring clients bespoke websites! I am so happy with the support I received from Sybil and over the moon with the way my website looks! I have been recommending Sybil to everyone and won't stop! She's amazing!</p>
                             <div class="center">
                                 <img src="https://sybilmayard.com/images/logos/happily-clappily-ever-laughter-logo.png" alt="Happily Clappily Ever Laughter logo">
                             </div>
@@ -198,6 +208,8 @@ permalink: /
                             <p class="center">CEO,<br>Happily Clappily Ever Laughter</p>
                         </div>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-6">
                         <div class="shadow-box center">                            
                             <p>It was a pleasure to work with Sybil to create my Shopify website. 
@@ -233,6 +245,8 @@ permalink: /
                                 Focus on Learning</p>
                         </div>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-6">
                         <div class="shadow-box center">                            
                             <p>I have been working with Sybil on a range of digital 
@@ -267,6 +281,7 @@ permalink: /
                         </div>
                     </div>
                 </div>
+                </div>
             </div>
         </div>
         <div class="certifications section">
@@ -290,10 +305,10 @@ permalink: /
                             alt="Sybil Mayard Yoast for Beginners certificate"></a>
                     </div>
                     <div class="col-4">
-                        <h4>Google Analytics Academy Certified</h4>
-                        <a href="https://sybilmayard.com/uploads/sybil-mayard-google-analytics-for-beginners.pdf" target="_blank">
-                            <img src="https://sybilmayard.com/images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png"
-                                alt="Sybil Mayard Google Analytics for Beginners certificate">
+                        <h4>The Complete 2022 Software Testing Bootcamp</h4>
+                        <a href="https://sybilmayard.com/uploads/udemy-the-complete-2022-software-testing-bootcamp.pdf" target="_blank">
+                            <img src="https://sybilmayard.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpeg"
+                                alt="Sybil Mayard Udemy The Complete 2022 Software Testing Bootcamp">
                         </a>
                     </div>
                 </div>
