--- a/clients.html
+++ b/clients.html
@@ -109,6 +109,27 @@ permalink: /clients/
                     their goal of improving their online presence. Here is a selection of my 
                     most recent client projects and the services that were provided.</p>
 
+                <div id="nerowireart" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybilmayard.com/images/clients/nerowireart.jpg" alt="Nerowireart">
+                        </div>
+                        <div class="col-8">
+                            <h2>Nerowireart</h2>
+                            <h3 style="font-size: 18px;">Handcrafted bonsai wire trees to enhance your home décor.</h3>
+                            <ul>
+                                <li>Website design and development</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://www.nerowireart.com/" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="tizane" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-4">
